k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: web
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/from-to-www-redirect: 'true'
spec:
  tls:
    - hosts:
        - mangaroo.moe
        - www.mangaroo.moe
        - staging.mangaroo.moe
      secretName: web-tls
  rules:
    - host: "www.mangaroo.moe"
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: web
              port:
                number: 80
    - host: "staging.mangaroo.moe"
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: web-staging
              port:
                number: 80
